--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=BookMyTicket
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.show-sql=true
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/booking_app
+spring.datasource.username=gaurav
+spring.datasource.password=gauravkalita123
