--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/booking_app
 spring.datasource.username=gaurav
-spring.datasource.password=gauravkalita123
+spring.datasource.password=gaurav123
